--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rohit Dhimal CV</title>
 
+
+    <link rel="icon" rel="shortcut icon" type="image/x-icon" href="./img/Untitled-1.png">
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
