--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <meta name="description" content=" A motivated and personable web developer with experience in Designing and backend works. Experience in making UI/UX designs, Photoshop, HTML, CSS, Languages like PHP (Laravel), JS. (React). Capable of handling work pressure Strong work ethic and commitment to integrity ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="keywords" content="Rohit Dhimal, Rohit, Dhimal, CV, Rohit Dhimal CV, Rohit Dhimal Portfolio, Rohit Website, Rohit CV, Rohit laravel, Portfolio, Rohit Dhimal linkedin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rohit Dhimal CV</title>
 
@@ -14,10 +18,8 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -25,20 +27,20 @@
     <div class="container">
       
       <!-- Card -->
-      <div class="row  mt-5">
+      <div class="row mt-5 ">
 
-          <div class="col-md-4 mb-2">
-            <div class="card shadow">
-              <img src="./img/IMG_4900.jpg" alt="Rohit Dhimal" class="img-fluid mx-auto mt-5 mb-3" style="width:50%; ">
-              <h5 class="mt-2 font-weight-bold">Rohit Dhimal</h5>
-              <p class="text-muted">Web Developer</p>
-              <p class="text-muted">University of Wolverhampton</p>
+          <div class="col-md-4 mb-2 animate__tada">
+            <div class="card shadow ">
+              <img src="./img/pp.JPG" alt="Rohit Dhimal" class="img-fluid mx-auto mt-5 mb-3 rounded-circle" style="width:50%;" >
+              <h5 class="mt-2 font-weight-bold ">Rohit Dhimal</h5>
+              <p class="text-muted ">Web Developer</p>
+              <p class="text-muted ">University of Wolverhampton</p>
 
               <div class="mb-3">
-                <a href="https://www.instagram.com/rohitdhimal15/"><i class="fab fa-instagram"></i></a> 
-                <a href="https://twitter.com/DhimalRohit19"><i class="fab fa-twitter"></i></a>  
-                <a href="https://www.linkedin.com/in/rohit-dhimal-271a80155/"><i class="fab fa-linkedin"></i></a>  
-                <a href="https://www.facebook.com/rohit.dhimal.50/"><i class="fab fa-facebook"></i></a> 
+                <a href="https://www.instagram.com/rohitdhimal15/" target="_blank"><i class="fab fa-instagram "></i></a> 
+                <a href="https://twitter.com/DhimalRohit19" target="_blank"><i class="fab fa-twitter"></i></a>  
+                <a href="https://www.linkedin.com/in/rohit-dhimal-271a80155/" target="_blank"><i class="fab fa-linkedin"></i></a>  
+                <a href="https://www.facebook.com/rohit.dhimal.50/" target="_blank"><i class="fab fa-facebook"></i></a> 
               </div>
 
               <div class="mb-2">
@@ -47,12 +49,12 @@
             </div>
           </div>
           
-          <div class="col-md-8">
-            <div class="card">
+          <div class="col-md-8 ">
+            <div class="card ">
               <div class="card-header ">
                 <span class="font-weight-bold float-left"> About </span>
                 <span class="font-weight-bold float-right text-decoration-none"> 
-                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Protfolio</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">My Works (Portfolio)</button>
                     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                       <div class="modal-dialog modal-lg">
                         <div class="modal-content">
@@ -64,6 +66,9 @@
                           </div>
                           <div class="modal-body">
                             <div class="row">
+
+                              <!-- TOp steam -->
+
                               <div class="col-6">
                                 <div class="card bg-warning shadow">
                                   <div class="card-header shadow">
@@ -72,8 +77,23 @@
                                   <div class="card-body ">
 
                                     <a href="http://www.topsteam.dk/" target="_blank" rel="noopener noreferrer"> topsteam.dk</a>
-                                    <p class="text-muted text-light"> Top steam is a Danish Car servicing Company. This was my first ever project 
+                                    <p class="text-light"> Top steam is a Danish Car servicing Company. This was my first ever project 
                                       done for a real client </p>
+                                  </div>
+                                </div>
+                              </div>
+
+
+                              <!-- Journey To Australia -->
+                              <div class="col-6">
+                                <div class="card bg-warning shadow">
+                                  <div class="card-header shadow">
+                                    Journey To Australia
+                                  </div>
+                                  <div class="card-body text-light">
+
+                                    <a href="https://www.journeytoaustralia.com/" target="_blank" rel="noopener noreferrer">Journey To Australia</a>
+                                    <p class=""> Journey To Australia is a Australian based Consultancy focusing on enchancing student career. </p>
                                   </div>
                                 </div>
                               </div>
@@ -112,7 +132,7 @@
                           <span class="mt-3"> 
                               <p class="font-weight-bold">Responsive Design</p>
                               <i class="fas fa-mobile-alt codes"></i> 
-                              <p class="text-muted">Able to create responsive mobile designs</p>
+                              <p class="text-muted">Able to create mobile responsive designs</p>
                           </span>
                         </div>
                       </div>
